fix sideBar component animation to slide in correctly and more performant on mobile

--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -3,11 +3,13 @@
 $sidebarWidth: 250px;
 
 .mobileNavCommon {
-  position: fixed;
+  position: absolute;
+  top: 0;
+  right: 0;
   z-index: 5;
-  width: 100%;
-  height: 100%;
   background: rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  -webkit-backface-visibility: hidden;
 }
 
 // .mobileNavClose {
@@ -20,13 +22,20 @@ $sidebarWidth: 250px;
 .mobileNavOpen {
   composes: mobileNavCommon;
   opacity: 1;
-  transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
+  transition: opacity 1s ease;
   display: block;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
 }
 
 // this creates an area to trigger the mobile nav off
 .mobileNavOffTrigger {
+  // to stop the flashing onto the menubar on ios
+  position: absolute;
+  top: $menuBarHeight;
   width: calc(100% - #{$sidebarWidth});
+  // height: calc(100% - #{$menuBarHeight});
   height: 100%;
 }
 .menuClose {
@@ -35,13 +44,13 @@ $sidebarWidth: 250px;
   right: 0;
   visibility: hidden;
   // setting the width and overflow hidden stop the div to take up space when they are close and stop the horizontal scrolling.
-  width: 0px;
+  width: 0;
   overflow: hidden;
   height: 100%;
   transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   transform: translate3d(100%, 0, 0);
-  // to increase performance on mobile include backface-visibility property
-  backface-visibility: hidden;
+  // to increase performance on mobile include -webkit-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   opacity: 0;
 }
 
@@ -57,7 +66,7 @@ $sidebarWidth: 250px;
   height: 100%;
   transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   transform: translate3d(0, 0, 0);
-  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   opacity: 1;
 }
 .menuContent {
